Fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -441,6 +441,7 @@ p {
 .dev-section-container .dev-section-wrapper .dev-section-image {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .dev-section-container .dev-section-wrapper .dev-section-image img {
